wp-content/themes/hotel-melbourne/style.css
/* ... */
.wpcf7-form .wpcf7-submit {
    background: #ff8800;
    border: 0;
    padding: 5px 25px;
    border-radius: 2px;
    color: #fff;
}
.wpcf7-form input,.wpcf7-form textarea {
  width: 100%;
  border: 1px solid;
  padding: 5px 10px;
}
.modal-content {
  max-height: 600px;
  overflow-y: visible;
  overflow-x: hidden;
}
.navbar.affix .container {
  margin: 0 40px;
}
.navbar .navbar-right {
  margin-right: -160px;
}
.navbar-toggle {
  margin-right: 0 !important;
  margin-bottom: 0 !important;
  margin-top: 18px !important;
}

